@@ -14,12 +14,12 @@
 	  (push scope-arg (funinfo-argdef fi))
 	  (push scope-arg (funinfo-args fi)))))
 
-(fn funinfo-setup-scope (fi var)
+(fn funinfo-setup-scope (fi x)
   (alet (funinfo-parent fi)
-    (| ! (error "Couldn't find ~A in environment." var))
+    (| ! (error "Couldn't find ~A in environment." x))
     (when (lambda-export?)
       (funinfo-make-scope (funinfo-parent fi))
       (funinfo-make-scope-arg fi))
-    (? (funinfo-arg-or-var? ! var)
-	   (funinfo-add-scoped-var ! var)
-       (funinfo-setup-scope ! var))))
+    (? (funinfo-arg-or-var? ! x)
+	   (funinfo-add-scoped-var ! x)
+       (funinfo-setup-scope ! x))))
